# PIM

./: README.md
PIM_hortifruti/: CMakeLists.txt  main.c
PIM_hortifruti/Avisos/: avisos.c  avisos.h
PIM_hortifruti/Clientes/: clientes.c  clientes.h
PIM_hortifruti/Compras/: compras.c  compras.h
PIM_hortifruti/Fornecedores/: fornecedores.c  fornecedores.h
PIM_hortifruti/Funcionarios/: funcionarios.c  funcionarios.h
PIM_hortifruti/Login/: login.c  login.h
PIM_hortifruti/Menus/: menus.c  menus.h
PIM_hortifruti/Orçamentos/: orcamentos.c  orcamentos.h
PIM_hortifruti/Pesagem/: pesagem.c  pesagem.h
PIM_hortifruti/Produtos/: produtos.c  produtos.h
PIM_hortifruti/Relatorios/: relatorios.c  relatorios.h
PIM_hortifruti/Usuarios/: usuarios.c  usuarios.h
PIM_hortifruti/Uteis/: uteis.c  uteis.h
PIM_hortifruti/Vendas/: vendas.c  vendas.h
